--- a/podsDemo/ExampleApp.html
+++ b/podsDemo/ExampleApp.html
@@ -1,13 +1,1 @@
-<p style=" "><font face="Helvetica"  style=" font-size:12px; " >Fhjjjjjggop</font><b>
-    <font face="Helvetica"  style=" font-size:12px; " >tjjjkk</font></b><strike><b><font face="Helvetica"  style=" font-size:12px; " >hh</font>
-    </b></strike>
-<img src="faceiron.png" width="30%" alt="这是一幅地图"/>
-<strike>
-    
-    <b>
-        <font face="Helvetica"  style=" font-size:12px; color:rgb(46,255,57); " >dghhh</font>
-    </b>
-    
-</strike>
-
-</p>
+<p style=" "><font face="Helvetica"  style=" font-size:12px; " >Fg high</font></p><p style=" "></p><p style=" "><font face="Helvetica"  style=" font-size:12px; " ><img src= "faceiron.png" /></font></p><p style=" "></p><p style=" "></p><p style=" "></p><p style=" "><font face="Helvetica"  style=" font-size:12px; " ><img src= "faceiron.png" /></font></p><p style=" "></p><p style=" "></p><p style=" "></p><p style=" "><font face="Helvetica"  style=" font-size:12px; " ><img src= "faceiron.png" /></font></p><p style=" "></p><p style=" "><font face="Helvetica"  style=" font-size:12px; " >Ryg</font></p>
